flux/infrastructure/webapps/openclaw/endpoints.yaml
# Auto-split from cluster files
apiVersion: v1
kind: Endpoints
metadata:
  name: openclaw-gateway
  namespace: webapps
subsets:
- addresses:
  - ip: 172.16.0.22
  ports:
  - port: 18789
